finished home and team page

--- a/data/users.yml
+++ b/data/users.yml
@@ -2,3 +2,7 @@
   github_nickname: 'ssaunier'
 - name: 'Boris Paillard'
   github_nickname: 'Papillard'
+- name: 'Alexis Watine'
+  github_nickname: 'awatine'
+- name: 'Francis Berger'
+  github_nickname: 'fraberg'
